# photobot

./: .gitignore  parallel_ex.py  pyproject.toml
src/: bot.py  entity.py  settings.py  worker.py
